# linux-c

./: .gitignore  CMakeLists.txt  build.sh
doc/: C++-note.md  (+2 more)
src/linux-c/: .CMakeLists.txt.swp  CMakeLists.txt
src/linux-c/02cpp/: 01.cpp  02.cpp  03.cpp  04.cpp
src/linux-c/03cpp/: 01.cpp  02.cpp  03.cpp  04.cpp
src/linux-c/04cpp/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp
src/linux-c/05cpp/: 01.cpp  02.cpp
src/linux-c/08cpp/: 01.cpp  Clock.cpp  Clock.h
src/linux-c/09cpp/: 01.cpp  02.cpp  Test.cpp  Test.h
src/linux-c/10cpp/: 01.cpp  02.cpp
src/linux-c/11cpp/: 01.cpp  02.cpp  03.cpp  04.cpp  Test.cpp  Test.h
src/linux-c/12cpp/: 01.cpp  02.cpp  Test.cpp  Test.h
src/linux-c/13cpp/: 01.cpp  02.cpp  03.cpp  Clock.cpp  Clock.h
src/linux-c/14cpp/: 01.cpp  02.cpp  Test.cpp  Test.h
src/linux-c/14socket/: echosrv.c
src/linux-c/15cpp/: 01.cpp  02.cpp  String.cpp  String.h
src/linux-c/15socket/: echocli  echocli.c  echosrv  echosrv.c
src/linux-c/16cpp/: 01.cpp  02.cpp  03.cpp  04.cpp  CountedObject.cpp  CountedObject.h
src/linux-c/16socket/: cli.c  srv.c  sysutil.c  sysutil.h
src/linux-c/17cpp/: 01.cpp  02.cpp
src/linux-c/17socket/: conntest.c  nofile_limit.c
src/linux-c/18cpp/: 01.cpp  02.cpp  03.cpp
src/linux-c/18socket/: echocli  epollsrv
src/linux-c/19cpp/: 01.cpp
src/linux-c/19socket/: echocli.c
src/linux-c/20cpp/: 01.cpp  02.cpp
src/linux-c/21cpp/: 01.cpp  02.cpp  03.cpp  TeleController.cpp  TeleController.h  Television.cpp  Television.h  a.out
src/linux-c/21socket/: echocli.c  echosrv.c
src/linux-c/22cpp/: 01.cpp  Complex.cpp  Complex.h
src/linux-c/23cpp/: 01.cpp  02.cpp  Integer.cpp  Integer.h  String.cpp  String.h
src/linux-c/24cpp/: 01.cpp  String.cpp  String.h
src/linux-c/25cpp/: 01.cpp  02.cpp  03.cpp  Integer.cpp  Integer.h
src/linux-c/25ipc/: msg_set.c  msg_stat.c
src/linux-c/26cpp/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp
src/linux-c/26ipc/: msg_get.c  msg_recv.c  msg_rmid.c  msg_send.c
src/linux-c/27cpp/: 01.cpp  02.cpp  03.cpp  StringUtil.cpp  StringUtil.h
src/linux-c/28cpp/: 01.cpp  02.cpp  03.cpp  04.cpp
src/linux-c/28ipc/: mmap_read.c  mmap_write.c
src/linux-c/29cpp/: 01.cpp  02.cpp
src/linux-c/30cpp/: 01.cpp  02.cpp
src/linux-c/30ipc/: sem.c
src/linux-c/31cpp/: 01.cpp  02.cpp
src/linux-c/31ipc/: print.c
src/linux-c/32cpp/: 01.cpp  02.cpp  03.cpp  04.cpp
src/linux-c/32ipc/: dining.c
src/linux-c/33cpp/: 01.cpp
src/linux-c/34cpp/: 01.cpp  02.cpp  03.cpp  04.cpp
src/linux-c/35cpp/: 01.cpp  02.cpp
src/linux-c/36cpp/: 01.cpp  DynBase.h  DynTest.cpp  Shape.cpp  Shape.h
src/linux-c/37cpp/: 01.cpp
src/linux-c/38cpp/: 01.cpp
src/linux-c/io_01/: 01fileno.c  02open.c  03open.c  04open.c  a.out
src/linux-c/io_02/: 01cp.c  02lseek.c  03hole.c  04ls.c  a.out
src/linux-c/io_03/: 01stat.c  a.out
src/linux-c/io_04/: 01fileshare.c  02dup.c  a.out
src/linux-c/io_05/: 01fcntl.c  02fcntl.c  03fcntl.c  a.out
src/linux-c/linux_c01/: a.out  isalnum.c  isalpha.c  isascii.c  iscntrl.c  islower.c  ispunct.c  isxdigit.c
src/linux-c/linux_c02/: .strtod.c.swp  a.out  atof.c  atol.c  gcvt.c  strtod.c  toascii.c
src/linux-c/linux_c03/: calloc.c
src/linux-c/linux_c04/: a.out  ctime.c  gettimeofday.c  gmtime.c  localtime.c  mktime.c
src/linux-c/linux_c05/: a.out  bcopy.c  bzero.c  index.c  memccpy.c  memchr.c  memcmp.c  strcasecmp.c  strchr.c  strncasecmp.c
src/linux-c/linux_c06/: strcoll.c  strcpy.c  strcspn.c  strlen.c  strncat.c  strncpy.c  strpbrk.c  strspn.c
src/linux-c/linux_c07/: a.out  fgetgrent.c  getegid.c  getpw.c  getpwnam.c  getutent.c  getutid.c  getutline.c  pututline.c  setgrent.c
src/linux-c/linux_c08/: .bsearch.c.swp  a.out  bsearch.c  crypt.c  lsearch.c  qsort.c  rand.c  srand.c
src/linux-c/linux_c09/: a.out  lseek.c  mkstemp.c  open.c  read.c  write.c
src/linux-c/linux_c10/: a.out  fdopen.c  fgetc.c  fgets.c  fileno.c  fopen.c  fputc.c  fputs.c  fread.c  freopen.c  fseek.c  fwrite.c  getchar.c  mktemp.c  setbuf.c  setlinebuf.c  setvbuf.c  ungetc.c
src/linux-c/linux_c11/: a.out  atexit.c  execl.c  execlp.c  execv.c  execve.c  execvp.c  fprintf.c  fscanf.c  getpgid.c  getpgrp.c  getpid.c  on_exit.c  printf.c  scanf.c  sprintf.c  sscanf.c  system.c  vfork.c  vfscanf.c  vprintf.c  wait.c  waitpid.c
src/linux-c/linux_c12/: a.out  access.c  alphasort.c  chdir.c  chmod.c  chown.c  chroot.c  fchdir.c  fchown.c  fstat.c  getcwd.c  link.c  readdir.c  rename.c  rewinddir.c  seekdir.c  stat.c  symlink.c  telldir.c
src/linux-c/linux_c13/: a.out  alarm.c  kill.c  perror.c  pipe.c  popen.c  sigaction.c  signal.c  strerror.c
src/linux-c/linux_c14/: a.out  client  server  tcp-client.c  tcp-server.c  udp-client.c  udp-server  udp-server.c
src/linux-c/linux_c15/: a.out  getenv.c  putenv.c  setenv.c
src/linux-c/linux_c16/: a.out  getopt.c  ttyname.c
src/linux-c/pid_01/: 01fork.c  a.out
src/linux-c/pid_02/: 01fork.c  02fork.c  03vfork.c  04execve.c  a.out
src/linux-c/pid_03/: 01exec.c  02exec.c  03exec.c  04exec.c  05exec.c  06exec.c  a.out  hello  hello.c
src/linux-c/pid_04/: 01wait.c  02system.c  a.out
src/linux-c/pid_05/: 01testd.c  a.out
src/linux-c/pipe_01/: 01pipe.c  02pipe.c  03cp.c  a.out
src/linux-c/pipe_02/: 01pipe.c  02pipe.c  03pipe.c  04pipe.c  a.out
src/linux-c/pipe_03/: 01mkfifo.c  02fifor.c  03fifow.c  04fifow.c  05fifor.c  a.out
src/linux-c/signal_01/: 01signal.c  02signal.c  a.out
src/linux-c/signal_02/: 01kill.c  02kill.c  a.out
src/linux-c/signal_03/: 01alarm.c  02reentrant.c  a.out
src/linux-c/signal_04/: 01sigstatus.c  a.out
src/linux-c/signal_05/: 02sigaction.c  03sigaction.c  a.out
src/linux-c/signal_06/: 01sigaction.c  02sigaction_recv.c  03sigqueue_send.c  04sigaction_recv  04sigaction_recv.c  05sigqueue_send  05sigqueue_send.c  a.out
src/linux-c/signal_07/: 01setitimer.c  02setitimer.c  03getitimer.c  a.out
src/linux-c/socket_01/: 01byteorder.c  02addr.c  a.out
src/linux-c/socket_02/: 01echosrv  01echosrv.c
src/linux-c/socket_03/: 01echocli  01echocli.c  01echosrv  01echosrv.c  p2pcli  p2pcli.c  p2psrv  p2psrv.c
(+59 files in other folders)
