add_executable(isalnum ./linux_c01/isalnum.c)
add_executable(isalpha ./linux_c01/isalpha.c)
add_executable(isascii ./linux_c01/isascii.c)
add_executable(isdigit ./linux_c01/isdigit.c)
add_executable(isxdigit ./linux_c01/isxdigit.c)
add_executable(iscntrl ./linux_c01/iscntrl.c)
add_executable(isgraphis ./linux_c01/isgraphis.c)
add_executable(isprint ./linux_c01/isprint.c)
add_executable(isspace ./linux_c01/isspace.c)
add_executable(islower ./linux_c01/islower.c)
add_executable(isupper ./linux_c01/isupper.c)
add_executable(ispunct ./linux_c01/ispunct.c)
add_executable(gcvt ./linux_c02/gcvt.c)
add_executable(strtol ./linux_c02/strtol.c)
add_executable(toupper ./linux_c02/toupper.c)
add_executable(atof ./linux_c02/atof.c)
add_executable(atol ./linux_c02/atol.c)
add_executable(atotod ./linux_c02/strtod.c)
add_executable(strtoul ./linux_c02/strtoul.c)
add_executable(tolower ./linux_c02/tolower.c)
add_executable(calloc ./linux_c03/calloc.c)
add_executable(ctime ./linux_c04/ctime.c)
add_executable(gmtime ./linux_c04/gmtime.c)
add_executable(mktime ./linux_c04/mktime.c)
add_executable(time ./linux_c04/time.c)
add_executable(asctime ./linux_c04/asctime.c)
add_executable(getimeofday ./linux_c04/gettimeofday.c)
add_executable(localtime ./linux_c04/localtime.c)
add_executable(settimeofday ./linux_c04/settimeofday.c)
add_executable(bzero ./linux_c05/bzero.c)
add_executable(memchr ./linux_c05/memchr.c)
add_executable(strcat ./linux_c05/strcat.c)
add_executable(strncasecmp ./linux_c05/strncasecmp.c)
add_executable(bcmp ./linux_c05/bcmp.c)
add_executable(index ./linux_c05/index.c)
add_executable(memcmp ./linux_c05/memcmp.c)
add_executable(rindex ./linux_c05/rindex.c)
add_executable(strchr ./linux_c05/strchr.c)
add_executable(bcopy ./linux_c05/bcopy.c)
add_executable(memccpy ./linux_c05/memccpy.c)
add_executable(memcpy ./linux_c05/memcpy.c)
add_executable(strcasecmp ./linux_c05/strcasecmp.c)
add_executable(strcmp ./linux_c05/strcmp.c)
add_executable(strcpy ./linux_c06/strcpy.c)
add_executable(strdup ./linux_c06/strdup.c)
add_executable(strncpy ./linux_c06/strncpy.c)
add_executable(strrchr ./linux_c06/strrchr.c)
add_executable(strstr ./linux_c06/strstr.c)
add_executable(strcoll ./linux_c06/strcoll.c)
add_executable(strcspn ./linux_c06/strcspn.c)
add_executable(strlen ./linux_c06/strlen.c)
add_executable(strncat ./linux_c06/strncat.c)
add_executable(strpbrk ./linux_c06/strpbrk.c)
add_executable(strspn ./linux_c06/strspn.c)
add_executable(strtok ./linux_c06/strtok.c)
add_executable(geteuid ./linux_c07/geteuid.c)
add_executable(getgrnam ./linux_c07/getgrnam.c)
add_executable(getpwnam ./linux_c07/getpwnam.c)
add_executable(getutid ./linux_c07/getutid.c)
add_executable(getpwent ./linux_c07/getpwent.c)
add_executable(fgetgrent ./linux_c07/fgetgrent.c)
add_executable(getgid ./linux_c07/getgid.c)
add_executable(getgroups ./linux_c07/getgroups.c)
add_executable(getpwuid ./linux_c07/getpwuid.c)
add_executable(getutline ./linux_c07/getutline.c)
add_executable(setutent ./linux_c07/setutent.c)
add_executable(getegid ./linux_c07/getegid.c)
add_executable(fgetpwent ./linux_c07/fgetpwent.c)
add_executable(getgrent ./linux_c07/getgrent.c)
add_executable(getpw ./linux_c07/getpw.c)
add_executable(getuid ./linux_c07/getuid.c)
add_executable(pututline ./linux_c07/pututline.c)
add_executable(getgrgid ./linux_c07/getgrgid.c)
add_executable(getutent ./linux_c07/getutent.c)
add_executable(setgrent ./linux_c07/setgrent.c)
add_executable(bsearch ./linux_c08/bsearch.c)
add_executable(lsearch ./linux_c08/lsearch.c)
add_executable(qsort ./linux_c08/qsort.c)
add_executable(rand ./linux_c08/rand.c)
add_executable(srand ./linux_c08/srand.c)
add_executable(lseek ./linux_c09/lseek.c)
add_executable(read ./linux_c09/read.c)
add_executable(mkstemp ./linux_c09/mkstemp.c)
add_executable(write ./linux_c09/write.c)
add_executable(open ./linux_c09/open.c)
add_executable(fread ./linux_c10/fread.c)
add_executable(getchar ./linux_c10/getchar.c)
add_executable(setvbuf ./linux_c10/setvbuf.c)
add_executable(fdopen ./linux_c10/fdopen.c)
add_executable(fopen ./linux_c10/fopen.c)
add_executable(freopen ./linux_c10/freopen.c)
add_executable(mktemp ./linux_c10/mktemp.c)
add_executable(ungetc ./linux_c10/ungetc.c)
add_executable(fgetc ./linux_c10/fgetc.c)
add_executable(fileno ./linux_c10/fileno.c)
add_executable(fputc ./linux_c10/fputc.c)
add_executable(fseek ./linux_c10/fseek.c)
add_executable(setbuf ./linux_c10/setbuf.c)
add_executable(fgets ./linux_c10/fgets.c)
add_executable(setlinebuf ./linux_c10/setlinebuf.c)
add_executable(execv ./linux_c11/execv.c)
add_executable(fscanf ./linux_c11/fscanf.c)
add_executable(on_exit ./linux_c11/on_exit.c)
add_executable(atexit ./linux_c11/atexit.c)
add_executable(execve ./linux_c11/execve.c)
add_executable(getpgid ./linux_c11/getpgid.c)
add_executable(printf ./linux_c11/printf.c)
add_executable(system ./linux_c11/system.c)
add_executable(wait ./linux_c11/wait.c)
add_executable(execl ./linux_c11/execl.c)
add_executable(exexvp ./linux_c11/execvp.c)
add_executable(vfork ./linux_c11/vfork.c)
add_executable(execlp ./linux_c11/execlp.c)
add_executable(waitpid ./linux_c11/waitpid.c)
add_executable(fprintf ./linux_c11/fprintf.c)
add_executable(getpid ./linux_c11/getpid.c)
add_executable(sprintf ./linux_c11/sprintf.c)
add_executable(vfscanf ./linux_c11/vfscanf.c)
add_executable(access ./linux_c12/access.c)
add_executable(chdir ./linux_c12/chdir.c)
add_executable(chmod ./linux_c12/chmod.c)
add_executable(chown ./linux_c12/chown.c)
add_executable(link ./linux_c12/link.c)
add_executable(symlink ./linux_c12/symlink.c)
