add_executable(isalnum ./linux_c01/isalnum.c)
add_executable(isalpha ./linux_c01/isalpha.c)
add_executable(isascii ./linux_c01/isascii.c)
add_executable(isdigit ./linux_c01/isdigit.c)
add_executable(isxdigit ./linux_c01/isxdigit.c)
add_executable(iscntrl ./linux_c01/iscntrl.c)
add_executable(isgraphis ./linux_c01/isgraphis.c)
add_executable(isprint ./linux_c01/isprint.c)
add_executable(isspace ./linux_c01/isspace.c)
add_executable(islower ./linux_c01/islower.c)
add_executable(isupper ./linux_c01/isupper.c)
add_executable(ispunct ./linux_c01/ispunct.c)
add_executable(gcvt ./linux_c02/gcvt.c)
add_executable(strtol ./linux_c02/strtol.c)
add_executable(toupper ./linux_c02/toupper.c)
add_executable(atof ./linux_c02/atof.c)
add_executable(atol ./linux_c02/atol.c)
add_executable(atotod ./linux_c02/strtod.c)
add_executable(strtoul ./linux_c02/strtoul.c)
add_executable(tolower ./linux_c02/tolower.c)
add_executable(calloc ./linux_c03/calloc.c)
add_executable(ctime ./linux_c04/ctime.c)
add_executable(gmtime ./linux_c04/gmtime.c)
add_executable(mktime ./linux_c04/mktime.c)
add_executable(time ./linux_c04/time.c)
add_executable(asctime ./linux_c04/asctime.c)
add_executable(getimeofday ./linux_c04/gettimeofday.c)
add_executable(localtime ./linux_c04/localtime.c)
add_executable(settimeofday ./linux_c04/settimeofday.c)
add_executable(bzero ./linux_c05/bzero.c)
add_executable(memchr ./linux_c05/memchr.c)
add_executable(strcat ./linux_c05/strcat.c)
add_executable(strncasecmp ./linux_c05/strncasecmp.c)
add_executable(bcmp ./linux_c05/bcmp.c)
add_executable(index ./linux_c05/index.c)
add_executable(memcmp ./linux_c05/memcmp.c)
add_executable(rindex ./linux_c05/rindex.c)
add_executable(strchr ./linux_c05/strchr.c)
add_executable(bcopy ./linux_c05/bcopy.c)
add_executable(memccpy ./linux_c05/memccpy.c)
add_executable(memcpy ./linux_c05/memcpy.c)
add_executable(strcasecmp ./linux_c05/strcasecmp.c)
add_executable(strcmp ./linux_c05/strcmp.c)
add_executable(strcpy ./linux_c06/strcpy.c)
add_executable(strdup ./linux_c06/strdup.c)
add_executable(strncpy ./linux_c06/strncpy.c)
add_executable(strrchr ./linux_c06/strrchr.c)
add_executable(strstr ./linux_c06/strstr.c)
add_executable(strcoll ./linux_c06/strcoll.c)
add_executable(strcspn ./linux_c06/strcspn.c)
add_executable(strlen ./linux_c06/strlen.c)
add_executable(strncat ./linux_c06/strncat.c)
add_executable(strpbrk ./linux_c06/strpbrk.c)
add_executable(strspn ./linux_c06/strspn.c)
add_executable(strtok ./linux_c06/strtok.c)
add_executable(geteuid ./linux_c07/geteuid.c)
add_executable(getgrnam ./linux_c07/getgrnam.c)
add_executable(getpwnam ./linux_c07/getpwnam.c)
add_executable(getutid ./linux_c07/getutid.c)
add_executable(getpwent ./linux_c07/getpwent.c)
add_executable(fgetgrent ./linux_c07/fgetgrent.c)
add_executable(getgid ./linux_c07/getgid.c)
add_executable(getgroups ./linux_c07/getgroups.c)
add_executable(getpwuid ./linux_c07/getpwuid.c)
add_executable(getutline ./linux_c07/getutline.c)
add_executable(setutent ./linux_c07/setutent.c)
add_executable(getegid ./linux_c07/getegid.c)
add_executable(fgetpwent ./linux_c07/fgetpwent.c)
add_executable(getgrent ./linux_c07/getgrent.c)
add_executable(getpw ./linux_c07/getpw.c)
add_executable(getuid ./linux_c07/getuid.c)
add_executable(pututline ./linux_c07/pututline.c)
add_executable(getgrgid ./linux_c07/getgrgid.c)
add_executable(getutent ./linux_c07/getutent.c)
add_executable(setgrent ./linux_c07/setgrent.c)
add_executable(bsearch ./linux_c08/bsearch.c)
add_executable(lsearch ./linux_c08/lsearch.c)
add_executable(qsort ./linux_c08/qsort.c)
add_executable(rand ./linux_c08/rand.c)
add_executable(srand ./linux_c08/srand.c)
add_executable(lseek ./linux_c09/lseek.c)
add_executable(read ./linux_c09/read.c)
add_executable(mkstemp ./linux_c09/mkstemp.c)
add_executable(write ./linux_c09/write.c)
add_executable(open ./linux_c09/open.c)
add_executable(fread ./linux_c10/fread.c)
add_executable(getchar ./linux_c10/getchar.c)
add_executable(setvbuf ./linux_c10/setvbuf.c)
add_executable(fdopen ./linux_c10/fdopen.c)
add_executable(fopen ./linux_c10/fopen.c)
add_executable(freopen ./linux_c10/freopen.c)
add_executable(mktemp ./linux_c10/mktemp.c)
add_executable(ungetc ./linux_c10/ungetc.c)
add_executable(fgetc ./linux_c10/fgetc.c)
add_executable(fileno ./linux_c10/fileno.c)
add_executable(fputc ./linux_c10/fputc.c)
add_executable(fseek ./linux_c10/fseek.c)
add_executable(setbuf ./linux_c10/setbuf.c)
add_executable(fgets ./linux_c10/fgets.c)
add_executable(setlinebuf ./linux_c10/setlinebuf.c)
add_executable(execv ./linux_c11/execv.c)
add_executable(fscanf ./linux_c11/fscanf.c)
add_executable(on_exit ./linux_c11/on_exit.c)
add_executable(atexit ./linux_c11/atexit.c)
add_executable(execve ./linux_c11/execve.c)
add_executable(getpgid ./linux_c11/getpgid.c)
add_executable(printf ./linux_c11/printf.c)
add_executable(system ./linux_c11/system.c)
add_executable(wait ./linux_c11/wait.c)
add_executable(execl ./linux_c11/execl.c)
add_executable(exexvp ./linux_c11/execvp.c)
add_executable(vfork ./linux_c11/vfork.c)
add_executable(execlp ./linux_c11/execlp.c)
add_executable(waitpid ./linux_c11/waitpid.c)
add_executable(fprintf ./linux_c11/fprintf.c)
add_executable(getpid ./linux_c11/getpid.c)
add_executable(sprintf ./linux_c11/sprintf.c)
add_executable(vfscanf ./linux_c11/vfscanf.c)
add_executable(access ./linux_c12/access.c)
add_executable(chdir ./linux_c12/chdir.c)
add_executable(chmod ./linux_c12/chmod.c)
add_executable(chown ./linux_c12/chown.c)
add_executable(link ./linux_c12/link.c)
add_executable(symlink ./linux_c12/symlink.c)
add_executable(alarm ./linux_c13/alarm.c)
add_executable(kill ./linux_c13/kill.c)
add_executable(pipe ./linux_c13/pipe.c)
add_executable(strerror ./linux_c13/strerror.c)
add_executable(perror ./linux_c13/perror.c)
add_executable(popen ./linux_c13/popen.c)
add_executable(signal ./linux_c13/signal.c)
add_executable(tcp-server ./linux_c14/tcp-server.c)
add_executable(tcp-client ./linux_c14/tcp-client.c)
add_executable(udp-server ./linux_c14/udp-server.c)
add_executable(udp-client ./linux_c14/udp-client.c)
add_executable(getenv ./linux_c15/getenv.c)
add_executable(putenv ./linux_c15/putenv.c)
add_executable(setenv ./linux_c15/setenv.c)
add_executable(getopt ./linux_c16/getopt.c)
add_executable(ttyname ./linux_c16/ttyname.c)
add_executable(io-01-fileno.c ./io_01/01fileno.c)
add_executable(io-01-02open.c ./io_01/02open.c)
add_executable(io-01-03open.c ./io_01/03open.c)
add_executable(io-01-04open.c ./io_01/04open.c)
add_executable(io-02-01cp.c ./io_02/01cp.c)
add_executable(io-02-02lseek.c ./io_02/02lseek.c)
add_executable(io-02-03hole.c ./io_02/03hole.c)
add_executable(io-02-04ls.c ./io_02/04ls.c)
add_executable(io-03-01stat.c ./io_03/01stat.c)
add_executable(io-04-01fileshare.c ./io_04/01fileshare.c)
add_executable(io-04-02dup.c ./io_04/02dup.c)
add_executable(io-05-01fcntl.c ./io_05/01fcntl.c)
add_executable(io-05-02fcntl.c ./io_05/02fcntl.c)
add_executable(io-05-03fcntl.c ./io_05/03fcntl.c)
add_executable(pid-01-01fork.c ./pid_01/01fork.c)
add_executable(pid-02-01fork.c ./pid_02/01fork.c)
add_executable(pid-02-02fork.c ./pid_02/02fork.c)
add_executable(pid-02-03vfork.c ./pid_02/03vfork.c)
add_executable(pid-02-04execve.c ./pid_02/04execve.c)
add_executable(pid-03-01exec.c ./pid_03/01exec.c)
add_executable(pid-03-02exec.c ./pid_03/02exec.c)
add_executable(pid-03-03exec.c ./pid_03/03exec.c)
add_executable(pid-03-04exec.c ./pid_03/04exec.c)
add_executable(pid-03-05exec.c ./pid_03/05exec.c)
add_executable(pid-03-06exec.c ./pid_03/06exec.c)
add_executable(pid-04-01wait.c ./pid_04/01wait.c)
add_executable(pid-04-02system.c ./pid_04/02system.c)
add_executable(pid-05-01testd.c ./pid_05/01testd.c)
add_executable(signal-01-01signal.c ./signal_01/01signal.c)
add_executable(signal-01-02signal.c ./signal_01/02signal.c)
add_executable(signal-02-01kill.c ./signal_02/01kill.c)
add_executable(signal-02-02kill.c ./signal_02/02kill.c)
add_executable(signal-03-01alarm.c ./signal_03/01alarm.c)
add_executable(signal-03-02reentrant.c ./signal_03/02reentrant.c)
add_executable(signal-04-01sigstatus.c ./signal_04/01sigstatus.c)
add_executable(signal-05-01sigaction.c ./signal_05/01sigaction.c)
add_executable(signal-05-02sigaction.c ./signal_05/02sigaction.c)
add_executable(signal-05-03sigaction.c ./signal_05/03sigaction.c)
add_executable(signal-06-01sigaction.c ./signal_06/01sigaction.c)
add_executable(signal-06-02sigaction_recv.c ./signal_06/02sigaction_recv.c)
add_executable(signal-06-03sigqueue_send.c ./signal_06/03sigqueue_send.c)
add_executable(signal-06-04sigaction_recv.c ./signal_06/04sigaction_recv.c)
add_executable(signal-06-05sigqueue_send.c ./signal_06/05sigqueue_send.c)
add_executable(signal-07-01setitimer.c ./signal_07/01setitimer.c)
add_executable(signal-07-02setitimer.c ./signal_07/02setitimer.c)
add_executable(signal-07-03getitimer.c ./signal_07/03getitimer.c)
add_executable(pipe-01-01pipe.c ./pipe_01/01pipe.c)
add_executable(pipe-01-02pipe.c ./pipe_01/02pipe.c)
add_executable(pipe-01-03cp.c ./pipe_01/03cp.c)
add_executable(pipe-02-01pipe.c ./pipe_02/01pipe.c)
add_executable(pipe-02-02pipe.c ./pipe_02/02pipe.c)
add_executable(pipe-02-03pipe.c ./pipe_02/03pipe.c)
add_executable(pipe-02-04pipe.c ./pipe_02/04pipe.c)
add_executable(pipe-03-01mkfifo.c ./pipe_03/01mkfifo.c)
add_executable(pipe-03-02fifor.c ./pipe_03/02fifor.c)
add_executable(pipe-03-03fifow.c ./pipe_03/03fifow.c)
add_executable(pipe-03-04fifow.c ./pipe_03/04fifow.c)
add_executable(pipe-03-05fifor.c ./pipe_03/05fifor.c)
add_executable(25-01 ./25cpp/01.cpp ./25cpp/Integer.cpp)
